Nuestra pagina web: HTML

--- a/C3 HTML/index.html
+++ b/C3 HTML/index.html
@@ -7,14 +7,59 @@
 </head>
 <body>
     <header>
-        <main>
-            <section>
-
-            </section>
-        </main>
+        <h1>Este es el titulo principal de mi pagina web</h1>
+        <span>HOME</span>
+        <span>NOTICIAS</span>
+        <span>EL CLIMA</span>
     </header>
+    <main>
+        <img src="./notice.png"/>
+        <section>
+            <h2>Esto es un titulo de sección de noticias</h2> 
+
+            <article>
+                <h3>Sección de noticias N°1</h3>
+
+                <div>
+                    <p>Este será el parrafo de la primera noticia que es muy importante</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit magnam quis,
+                        beatae debitis, adipisci error eum minima ipsam quasi, odit obcaecati in veritatis?
+                        Fuga hic, suscipit ex adipisci dolorem sit?
+                    </p>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h3>Sección de noticias N°2</h3>
+                <div>
+                    <p>Este es un listado de cosas importantes para la noticia</p>
+                </div> 
+                <div> 
+                    <ol>
+                        <li>Producto 1</li>
+                        <li>Producto 2</li>   
+                        <li>Producto 3</li>
+                        <li>Producto 4</li>
+                        <li>Producto 5</li>
+                    </ol>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h3> Sección de noticias N°3</h3>
+                <p>Este listado de cosas importantes no estará ordenado.</p>
+                <ul>
+                    <li>Este es un elemento</li>
+                    <li>Este es un elemento adicional</li>
+                    <li>Este es otro elemento adicional</li>
+                </ul>
+            </article>
+            
+        </section>
+    </main>
     <footer>
-        
+        <P>Este es el footer de mi página.Ahora voy a poner unos enlaces.</P>
+        <a href="contacto.html">Formulario de contacto</a>
     </footer>
 </body>
 </html>
